# k4GaudiPandora

./: CMakeLists.txt  README.md
doc/: ReleaseNotes.md
include/: BitField64.hxx  DDCaloHitCreator.h  DDGeometryCreator.h  DDMCParticleCreator.h  DDPfoCreator.h  DDTrackCreatorBase.h
k4GaudiPandora/: CMakeLists.txt  README.md
k4GaudiPandora/include/: CalorimeterHitType.h  ClusterShapes.h  DDBFieldPlugin.h  DDCaloDigi.h  DDCaloHitCreator.h  DDCaloHitCreatorALLEGRO.h  DDExternalClusteringAlgorithm.h  DDGeometryCreator.h  DDGeometryCreatorALLEGRO.h  DDMCParticleCreator.h  DDMuonDigiSimple.h  DDPandoraPFANewAlgorithm.h  DDPandoraPFANewProcessor.h  DDPfoCreator.h  DDScintillatorPpdDigi.h  DDSimpleMuonDigi.h  DDTrackCreatorALLEGRO.h  DDTrackCreatorBase.h  DDTrackCreatorCLIC.h  DDTrackCreatorILD.h  DDk4SimpleMuonDigi.h
k4GaudiPandora/options/: PandoraSettingsExternalClustering.xml  createExampleEventData.py  runDDCaloDigi.py  runDDSimpleMuonDigi.py  runExternalClustering.py  runPandora.py
k4GaudiPandora/src/: CalorimeterHitType.cc  ClusterShapes.cc  DDBFieldPlugin.cc  DDCaloDigi.cc  DDCaloHitCreator.cc  DDCaloHitCreatorALLEGRO.cc  DDExternalClusteringAlgorithm.cc  DDGeometryCreator.cc  DDGeometryCreatorALLEGRO.cc  DDMCParticleCreator.cc  DDMuonDigiSimple.cc  DDPandoraPFANewAlgorithm.cc  DDPandoraPFANewAlgorithm.cpp  DDPandoraPFANewProcessor.cc  DDPfoCreator.cc  DDScintillatorPpdDigi.cc  DDSimpleMuonDigi.cc  DDSimpleMuonDigiOld.cc  DDTrackCreatorALLEGRO.cc  DDTrackCreatorBase.cc  DDTrackCreatorCLIC.cc  DDTrackCreatorILD.cc  DDk4SimpleMuonDigi.cc
src/: BitField64.cxx  DDCaloHitCreator.cc  DDExternalClusteringAlgorithm.cc  DDGeometryCreator.cc  DDMCParticleCreator.cc  DDPandoraPFANewAlgorithm.cc  DDPfoCreator.cc  DDTrackCreatorBase.cc
test/: CMakeLists.txt
test/scripts/: compare-calohit-simcalohit-relations.py  compare-calohits.py  compare-pfos.py
